# locust-love-django

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  _mount.docker-compose.yml  docker-compose.yml  pyproject.toml  tasks_to_extend_performance_cases.md
.github/workflows/: .gitkeep  ci.yml
.junie/: guidelines.md
django-code-smells/: Dockerfile
django-code-smells/django_code_smells/: README.md  manage.py  pyproject.toml  requirements.txt
django-code-smells/django_code_smells/django_code_smells/: asgi.py  settings.py  urls.py  wsgi.py
django-code-smells/django_code_smells/examples_app/: admin.py  apps.py  complex_models.py  complex_queries.py  models.py  query_examples.py  serializers.py  urls.py  utils.py  views.py
django-code-smells/django_code_smells/templates/: fragment_caching_example.html
http_header_profiling_middleware/: middleware.py  setup.py
locust/: Dockerfile  locustfile.py
locust_tests/: Dockerfile  entrypoint.sh  locustfile.py  startup_logger.py
