[project]
name = "locust-live-django"
version = "0.1.0"
description = "Suite of Django ORM anti-patterns and automated test to detect them"
authors = [
    {name = "Yevhenii Dehtiar", email = "yevhenii.dehtiar@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "locust>=2.37.5",
    "Django>=5.0.0",
    "django-debug-toolbar>=4.4.6",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.27.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-django>=4.8.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["locust", "tests"]
include = ["django-code-smells/django_code_smells", "http_header_profiling_middleware"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
