[tool.poetry]
name = "django-code-smells"
version = "0.1.0"
description = ""
authors = ["Yevhenii Dehtiar <yevhenii.dehtiar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
